backoffice-app/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backoffice-app
  namespace: default
  labels:
    name: backoffice-app
spec:
  containers:
    - image: nhutnguyen5691/backoffice-app:lastest
      name: backoffice-app
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
